# Graphiti

./: Package.swift  README.md  SETUP_SUMMARY.md
.github/: RELEASE.md
.github/workflows/: README.md  server-build.yml  server-release.yml  swift-build.yml  swift-release.yml
graphiti-server/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  INSTALLATION.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  run.py
graphiti-server/graphiti_server/: __init__.py  config.py  main.py  models.py
graphiti-server/graphiti_server/api/: __init__.py  deps.py
graphiti-server/graphiti_server/api/routes/: __init__.py  admin.py  memory.py  search.py
graphiti-server/graphiti_server/core/: __init__.py  client.py  queue.py
graphiti-swift/: BUILD_NOTES.md  Package.resolved  Package.swift  README.md
graphiti-swift/Examples/: BasicExample.swift
graphiti-swift/Sources/GraphitiClient/Client/: GraphitiClient.swift
graphiti-swift/Sources/GraphitiClient/Core/: GraphitiError.swift
graphiti-swift/Sources/GraphitiClient/Models/: GraphitiModels.swift
graphiti-swift/Sources/GraphitiClient/Transport/: AsyncHTTPClientTransport.swift  HTTPTransport.swift  URLSessionTransport.swift
graphiti-swift/Tests/GraphitiClientTests/: GraphitiClientTests.swift
